# nous-core

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile
.claude/: settings.json
.github/workflows/: ci.yml
crates/nous-adapters/: Cargo.toml
crates/nous-adapters/src/: journald.rs  lib.rs  suricata.rs  syslog_adapter.rs  zeek.rs
crates/nous-core/: Cargo.toml
crates/nous-core/src/: action.rs  context.rs  entity.rs  error.rs  event.rs  lib.rs  severity.rs  state.rs  verdict.rs
crates/nous-ctl/: Cargo.toml
crates/nous-ctl/src/: main.rs
crates/nous-engine/: Cargo.toml
crates/nous-engine/src/: bus.rs  config.rs  consumers.rs  correlation.rs  feedback.rs  grpc.rs  ingest.rs  main.rs  persistence.rs  state_store.rs
crates/nous-mcp/: Cargo.toml
crates/nous-mcp/src/: main.rs  mcp.rs  tools.rs
crates/nous-proto/: Cargo.toml  build.rs
crates/nous-proto/proto/: nous.proto
crates/nous-proto/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/adapters/: journald.md  overview.md  suricata.md  syslog.md  zeek.md
docs/src/appendix/: environment-variables.md  ocsf-classes.md  troubleshooting.md
docs/src/cli/: entity.md  events.md  observe.md  overview.md  status.md  verdict.md  watch.md
docs/src/concepts/: context-windows.md  entities.md  event-schema.md  severity.md  verdicts-actions.md
docs/src/configuration/: nous-ctl.md  nous-engine.md  nous-mcp.md  persistence.md
docs/src/getting-started/: architecture.md  installation.md  quickstart.md
docs/src/mcp/: get-status.md  observe.md  overview.md  query-entity.md  query-events.md  submit-action.md  submit-verdict.md
docs/src/playbooks/: investigate-entity.md  overview.md  reduce-alert-fatigue.md  threat-hunt-from-ioc.md  triage-alert-backlog.md
