[package]
name = "nous-proto"
description = "Protobuf/gRPC service definitions for Nous Core API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
